# social-network/docs/openapi/swagger.yaml
@@ -308,6 +308,47 @@ paths:
         '503':
           $ref: '#/components/responses/5xx'
 
+  /post/feed:
+    get:
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: offset
+          schema:
+            type: number
+            minimum: 0
+            description: Оффсет с которого начинать выдачу
+            example: 100
+            default: 0
+          required: false
+          in: query
+        - name: limit
+          schema:
+            type: number
+            minimum: 1
+            description: Лимит, ограничивающий кол-во возвращенных сущностей
+            example: 10
+            default: 10
+          required: false
+          in: query
+      responses:
+        '200':
+          description: Успешно получены посты друзей
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Post'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '500':
+          $ref: '#/components/responses/5xx'
+        '503':
+          $ref: '#/components/responses/5xx'
+
   /loadtest/write:
     post:
       description: Запись в бд для нагрузочного тестирования
